--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/icons/
     - assets/sounds/
   # To add assets to your application, add an assets section, like this:
   # assets:
